--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "db:generate-migration": "npm run typeorm -- migration:generate ./migrations/UserTables -d ./orm-data-source.ts"
+    "db:generate-migration": "npm run typeorm -- migration:generate ./migrations/UserTables -d ./orm-data-source.ts",
+    "db:run-migrations": "npm run typeorm -- migration:run -d ./orm-data-source.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
