--- a/backend/package.json
+++ b/backend/package.json
@@ -20,22 +20,28 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "db:generate-migration": "npm run typeorm -- migration:generate ./migrations/UserTables -d ./orm-data-source.ts",
-    "db:run-migrations": "npm run typeorm -- migration:run -d ./orm-data-source.ts"
+    "db:run-migrations": "npm run typeorm -- migration:run -d ./orm-data-source.ts",
+    "db:seed": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d ./orm-data-source.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "@nestjs/apollo": "^12.0.10",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
     "mysql2": "^3.4.4",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "typeorm-extension": "^3.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
